--- a/css/styletaller.css
+++ b/css/styletaller.css
@@ -1,38 +1,45 @@
-.flex-container-talleres{
-    
+.flex-container-talleres {
     display: flex;
-    flex-wrap: nowrap; /* Asegura que las cajas principales no se envuelvan */
-    overflow-x: auto; /* Permite el desplazamiento horizontal si es necesario */
+    flex-wrap: nowrap; /* Mantiene las cajas en una sola línea */
+    overflow-x: auto;
     width: 100%;
-    height: auto; /* Ajusta según tus necesidades */
-    gap: 20px; /* Espacio entre las cajas principales */
-    flex-direction: row;
+    gap: 20px;
     align-items: center;
-
 }
 
 .caja-talleres1, .caja-talleres2 {
     display: flex;
     flex-direction: column;
     width: 50%;
-    height: auto;
 }
 
 .caja-talleres1 {
-    align-items: flex-end; /* Alinea los elementos hacia el margen derecho */
+    align-items: flex-end;
 }
 
 .caja-talleres2 {
-    align-items: flex-start; /* Alinea los elementos hacia el margen izquierdo */
+    align-items: flex-start;
 }
 
-/* Ajustes en las subcajas para que se mantengan dentro de los márgenes deseados */
 .subcaja1-talleres, .subcaja3-talleres {
     margin-top: 5%;
     width: 350px;
-    height: 400px; /* O el tamaño necesario */
-    
-    
+    height: 400px;
+    position: relative;
+    overflow: hidden; /* Asegura que la imagen no sobresalga del contenedor */
+}
+
+.subcaja1-talleres img, .subcaja3-talleres img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Asegura que la imagen se ajuste bien al contenedor */
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.subcaja1-talleres:hover img, .subcaja3-talleres:hover img {
+    transform: scale(1.1); /* Efecto de aumento al hacer hover */
+    opacity: 0.8;
+    z-index: 1; /* Eleva la imagen por encima de otros elementos */
 }
 
 .subcaja2-talleres, .subcaja4-talleres {
@@ -40,23 +47,18 @@
     align-items: flex-start;
     margin-top: 10px;
     padding: 3px;
-    background-color:rgb(33, 135, 111);
+    background-color: rgb(33, 135, 111);
     width: 350px;
-    height: 40px; /* Ajuste para las subcajas más pequeñas */
+    height: 40px;
 }
 
-/* Asegúrate que las imágenes ocupen todo el espacio de las subcajas */
-.subcaja1-talleres img, .subcaja3-talleres img {
-    width: 100%;
-    height: 100%;
-}
- 
 .subcaja2-talleres h1, .subcaja4-talleres h1 {
     font-family: 'Captain America';
-    font-size: 1.5em; /* Ajusta el tamaño del texto */
-    width: 80%; /* El texto ocupa el 70% de la subcaja */
-    white-space: nowrap; /* Evita que el texto se desborde y se vaya de los márgenes */
-    overflow: hidden; /* Esconde cualquier parte del texto que exceda el área visible */
-    margin: 0; /* Elimina márgenes adicionales */
-    color: white; /* Color del texto, puedes ajustarlo si es necesario */
+    font-size: 1.5em;
+    color: white;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Añade puntos suspensivos si el texto se desborda */
+    margin: 0;
 }
+
